minor changes for my local machine

--- a/src/template.conf
+++ b/src/template.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
-project_directory = /cluster/home/cschneider/CollembolAI/Pilot_MixMock/
+project_directory = /home/boy/Collembola
 model_name = faster_rcnn_R50_FPN
  
 [OPTIONAL]
