enforced new project structure for moudules

--- a/src/conf/template.conf
+++ b/src/conf/template.conf
@@ -11,5 +11,5 @@ batch_size = 5
 learning_rate = 0.00025 
 detection_treshold = 0.6
 gpu_device_num = 0
-duster = True
+duster = False
 deduplication_iou_threshold = 0.15
