--- a/environment.yaml
+++ b/environment.yaml
@@ -11,16 +11,16 @@ dependencies:
   - pandas=1.0.5
   - Pillow=9.0.1
   - Shapely=1.7.1
-  - tensorflow=2.2.0
   - tqdm=4.47.0
   - pytorch::pytorch=1.10.0
   - torchvision=0.11.1
-  - nvidia::cudatoolkit=11.1
+  - nvidia::cudatoolkit=11.3
+  - tensorflow
   - pip
 
   - pip:
     - git+https://github.com/obss/sahi.git
-    - --find-links https://dl.fbaipublicfiles.com/detectron2/wheels/cu111/torch1.10/index.html 
+    - --find-links https://dl.fbaipublicfiles.com/detectron2/wheels/cu113/torch1.10/index.html 
     - detectron2
     - scikit_learn==1.0.2
     - opencv_python==4.5.1.48
