--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 faster_rcnn_X_101_FPN/model_final.pth filter=lfs diff=lfs merge=lfs -text
+faster_rcnn_r50_fpn/model_final.pth filter=lfs diff=lfs merge=lfs -text
