Fixes on the model evaluation. Added Pascal VOC mAP scoring.

--- a/src/conf/template.conf
+++ b/src/conf/template.conf
@@ -14,3 +14,4 @@ batch_size = 20
 learning_rate = 0.00025 
 detection_threshold = 0.7
 non_maximum_supression_iou_threshold = 0.15
+true_pred_matching_iou_threshold = 0.4
